--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,14 @@ yarn-error.log*
 
 # Misc
 .env*
-*.local 
+*.local
+
+# Firebase
+firebase-debug.log*
+# Service account keys and private config
+serviceAccountKey.json
+**/serviceAccountKey.json
+**/firebase-service-account.json 
+
+# cache
+*.cache
