--- a/package.json
+++ b/package.json
@@ -1,34 +1,44 @@
 {
   "name": "vocab-flip-ai",
+  "description": "A modern AI-powered German vocabulary flash card app.",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
-    "@mlc-ai/web-llm": "^0.1.0",
-    "@sinclair/typebox": "^0.34.36",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@react-oauth/google": "^0.12.2",
+    "axios": "^1.10.0",
+    "lucide-react": "^0.522.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
+    "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@typescript-eslint/eslint-plugin": "^8.34.1",
-    "@typescript-eslint/parser": "^8.34.1",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@eslint/js": "^9.29.0",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.5.0",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.0"
-  },
-  "description": "A modern AI-powered German vocabulary flash card app."
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.30.1",
+    "vite": "^6.3.5"
+  }
 }
