--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vocab-flip-ai",
   "description": "A modern AI-powered German vocabulary flash card app.",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -39,6 +38,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
